Upgrade build tooling and migrate to lit v3
Modernize the project toolchain and library versions: set package.json to ESM (type: module), change main output path, upgrade dependencies (lit v3, newer home-assistant-js-websocket) and refresh devDependencies. Replace legacy rollup plugins with @rollup scoped plugins, update rollup config (node-resolve options, typescript plugin usage, babelHelpers set to 'bundled', include .ts extensions), and tighten eslint glob. Code adjustments to match updated libs: update imports in src (lit / lit-element), remove unused imports/types, simplify a catch clause, and fix battery rendering conditional logic. These changes prepare the project for modern ESM builds and Lit 3 compatibility.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "iparcelbox-card",
   "version": "0.0.1",
   "description": "Lovelace iparcelbox-card",
+  "type": "module",
   "keywords": [
     "home-assistant",
     "homeassistant",
@@ -11,43 +12,41 @@
     "custom-cards",
     "iparcelbox"
   ],
-  "module": "iparcelbox-card.js",
+  "main": "dist/iparcelbox-card.js",
   "repository": "git@github.com:gadget-man/iparcelbox-card.git",
   "author": "iParcelBox Ltd <support@iparcelbox.com>",
   "license": "MIT",
   "dependencies": {
     "custom-card-helpers": "^1.9.0",
-    "home-assistant-js-websocket": "^4.5.0",
-    "lit-element": "^2.4.0",
-    "lit-html": "^1.3.0"
+    "home-assistant-js-websocket": "^9.6.0",
+    "lit": "^3.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.5",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-decorators": "^7.20.5",
-    "@rollup/plugin-json": "^4.1.0",
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/parser": "^2.34.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-prettier": "^3.4.1",
-    "prettier": "^1.19.1",
-    "rollup": "^1.32.1",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-serve": "^1.1.0",
-    "rollup-plugin-terser": "^5.3.1",
-    "rollup-plugin-typescript2": "^0.24.3",
-    "rollup-plugin-uglify": "^6.0.4",
-    "typescript": "^3.9.7"
+    "@babel/core": "^7.29.0",
+    "@babel/plugin-proposal-decorators": "^7.29.0",
+    "@babel/plugin-transform-class-properties": "^7.28.6",
+    "@rollup/plugin-babel": "^6.1.0",
+    "@rollup/plugin-commonjs": "^29.0.0",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^16.0.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^12.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.56.0",
+    "@typescript-eslint/parser": "^8.56.0",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.5",
+    "prettier": "^3.8.1",
+    "rollup": "^4.58.0",
+    "rollup-plugin-serve": "^3.0.0",
+    "typescript": "^5.9.3"
   },
   "scripts": {
     "start": "rollup -c rollup.config.dev.js --watch",
     "build": "npm run lint && npm run rollup",
-    "lint": "eslint src/*.ts",
+    "lint": "eslint \"src/**/*.ts\"",
     "rollup": "rollup -c"
   }
 }
