--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "custom-card-helpers": "^1.9.0",
     "home-assistant-js-websocket": "^9.6.0",
-    "lit": "^3.3.2"
+    "lit": "^3.3.2",
+    "@lit-labs/scoped-registry-mixin": "^1.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.29.0",
